--- a/Fujimisite.html
+++ b/Fujimisite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="D:/Mitia/Fujimi/mystyle.css">
+    <link rel="stylesheet" href="mystyle.css">
     <title>不死身</title>
 </head>
 <body>
@@ -28,36 +28,36 @@
     <hr>
         <figure>
             <figcaption>Fevrier 2022</figcaption>
-            <img src="D:/Mitia/Fujimi/received_5042913625776106.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_1301219433686843.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_1262325707638746.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_1153261762128197.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_1060038081241094.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_982520282662878.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_677624256985657.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_645492443238683.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_637575477324659.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_544567416666529.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_492897482551178.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_478069023921902.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_364625582330375.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_337836738244085.jpeg"/>
-            <img src="D:/Mitia/Fujimi/received_333001762105429.jpeg"/>
+            <img src="received_5042913625776106.jpeg"/>
+            <img src="received_1301219433686843.jpeg"/>
+            <img src="received_1262325707638746.jpeg"/>
+            <img src="received_1153261762128197.jpeg"/>
+            <img src="received_1060038081241094.jpeg"/>
+            <img src="received_982520282662878.jpeg"/>
+            <img src="received_677624256985657.jpeg"/>
+            <img src="received_645492443238683.jpeg"/>
+            <img src="received_637575477324659.jpeg"/>
+            <img src="received_544567416666529.jpeg"/>
+            <img src="received_492897482551178.jpeg"/>
+            <img src="received_478069023921902.jpeg"/>
+            <img src="received_364625582330375.jpeg"/>
+            <img src="received_337836738244085.jpeg"/>
+            <img src="received_333001762105429.jpeg"/>
         </figure>
     <div class="boy">
         <p class="division">boys</p>
         <figure>
-        <img src="D:/Mitia/Fujimi/1645796780525.jpg">
-        <img src="D:/Mitia/Fujimi/1645796771827.jpg">
-        <img src="D:/Mitia/Fujimi/1645796760219.jpg">
+        <img src="1645796780525.jpg">
+        <img src="1645796771827.jpg">
+        <img src="1645796760219.jpg">
     </figure>
     </div>
     <div class="girl">
         <p class="division">girls</p>
         <figure>
-        <img src="D:/Mitia/Fujimi/1645796777776.jpg">
-        <img src="D:/Mitia/Fujimi/1645796765562.jpg">
-        <img src="D:/Mitia/Fujimi/1645796330392.jpg">
+        <img src="1645796777776.jpg">
+        <img src="1645796765562.jpg">
+        <img src="/1645796330392.jpg">
     </figure>
     </div>
 </body>
