--- a/Fujimisite.html
+++ b/Fujimisite.html
@@ -57,7 +57,7 @@
         <figure>
         <img src="1645796777776.jpg">
         <img src="1645796765562.jpg">
-        <img src="/1645796330392.jpg">
+        <img src="1645796330392.jpg">
     </figure>
     </div>
 </body>
