--- a/Fujimisite.html
+++ b/Fujimisite.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="Introduction">
-    <p>F U J I M I C R E W est un groupe de dance creer en 2018. Au depart, il a ete compose seulement de 3 garcons qui est le leader actuel, son sous chef et un autre gars. Dans le manque de coequipier, le leader surnomme Fujimi lancait un defi qui est de recruter des membres afin de completer leur groupe. Apres avoir completer leur groupe au 5, c'est ainsi que la creation officiel de ce groupe a eu lieu. </p>
+    <p>F U J I M I C R E W est un groupe de dance creé en 2018. Au depart, il a été composé seulement de 3 garçons qui est le leader actuel, son sous chef et un autre gars. Dans le manque de coequipier, le leader surnommé Fujimi lançait un defi qui est de recruter des membres afin de completer leur groupe. Après avoir completer leur groupe au 5, c'est ainsi que la creation officiel de ce groupe a eu lieu. </p>
     <u>Les membres actuels</u>
         <ul>
         <li>Ryu Kim(leader)</li>
