--- a/Fujimisite.html
+++ b/Fujimisite.html
@@ -12,17 +12,18 @@
     <p>F U J I M I C R E W est un groupe de dance creé en 2018. Au depart, il a été composé seulement de 3 garçons qui est le leader actuel, son sous chef et un autre gars. Dans le manque de coequipier, le leader surnommé Fujimi lançait un defi qui est de recruter des membres afin de completer leur groupe. Après avoir completer leur groupe au 5, c'est ainsi que la creation officiel de ce groupe a eu lieu. </p>
     <u>Les membres actuels</u>
         <ul>
-        <li>Ryu Kim(leader)</li>
-        <li>Nomeny Mitia</li>
-        <li>Timi Park</li>
-        <li>Lhtr Niavo Namjoon</li>
-        <li>Deborah Estrella </li>
+            <li><a href="https://www.facebook.com/fujimi.tsuyokuban" target="_blank">Ryu Kim</a>(leader)</li>
+            <li><a href="https://www.facebook.com/nomenymitia.andriamaheva" target="_blank">Nomeny Mitia</a></li>
+            <li><a href="https://www.facebook.com/timyliantsoa.eustache.5" target="_blank">Timi Park</a></li>
+            <li><a href="https://www.facebook.com/lhtr.niavoben" target="_blank">Lhtr Niavo Namjoon</a></li>
+            <li><a href="https://www.facebook.com/deborah.amy.77" target="_blank">Deborah Estrella </a></li>
+            <li><a href="https://www.facebook.com/yavo.andriamiharisoa" target="_blank">Yavo Andriamiharisoa</a></li>
         </ul>
     </div>
     <h1>Quelques photos prises au cours de ces annees passees</h1>
     <figure>
     <figcaption>Decembre 2020</figcaption>
-        <img src="D:/Mitia/Fujimi/FB_IMG_16412294221282474.jpg" alt="shooting a Plaza Ampefiloha"/>
+        <img src="FB_IMG_16412294221282474.jpg" alt="shooting a Plaza Ampefiloha"/>
     </figure>
     <br>
     <hr>
@@ -60,5 +61,21 @@
         <img src="1645796330392.jpg">
     </figure>
     </div>
-</body>
+    <br><br><br><br>
+    <figure>
+        <figcaption>Avis de recrutement</figcaption>
+        <img src="recrutements.jpg" alt="annonce"/>
+    </figure>
+    <p class="annonce">êtes-vous à la recherche d'un groupe de dance cover pour KPOP?
+        <br>
+        Fujimicrew est à la recherche de membres pour renforcer et completer leur groupe
+        <br>
+        Si vous êtes interessé, veuiller nous contacter parmi les moyens ci-dessous:
+        <br>
+        <ul>
+            <li><u><strong>E-mail</strong></u>: Fujimicrew@gmail.com</li>
+            <li><u><strong>Facebook</strong></u>: <a href="https://web.facebook.com/Fujimicrew/" target="_blank">F U J I M I C R E W</a></li>
+        </ul>
+    </p>
+</body> 
 </html>
